[package]
name = "rust"
version = "0.1.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion =  "0.3"


[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false